Fix the margin to ensure that a horizontal scroll never appears.

--- a/ssidetailing/ssidetailing/assets-10/site/css/bootstrap-carousel-template.css
+++ b/ssidetailing/ssidetailing/assets-10/site/css/bootstrap-carousel-template.css
@@ -116,7 +116,7 @@ body {
     -------------------------------------------------- */
 
 /* Center align the text within the three columns below the carousel */
-.marketing .span4 {
+.marketing .span4, .marketing .span6 {
     text-align: center;
 }
 
